--- a/dev-python/lockfile/ChangeLog
+++ b/dev-python/lockfile/ChangeLog
@@ -1,69 +1,269 @@
 # ChangeLog for dev-python/lockfile
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/lockfile/ChangeLog,v 1.17 2013/07/23 19:51:54 pinkbyte Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  23 Jul 2013; Sergey Popov <pinkbyte@gentoo.org> lockfile-0.9.1-r1.ebuild:
-  Stable on amd64 and x86, wrt bug #474188
+*lockfile-0.10.2 (09 Aug 2015)
+*lockfile-0.9.1-r1 (09 Aug 2015)
 
-  04 May 2013; Mike Gilbert <floppym@gentoo.org> lockfile-0.9.1-r1.ebuild:
-  Drop setuptools dep.
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +files/py3-support.patch,
+  +lockfile-0.9.1-r1.ebuild, +lockfile-0.10.2.ebuild, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  03 May 2013; Ian Delaney <idella4@gentoo.org> +files/py3-support.patch,
-  lockfile-0.9.1-r1.ebuild:
-  on closer review dropped py2.5; added py3 support & matching patch prepared by
-  'solj' in Bug #464766, closes same Bug by 'solj'
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-*lockfile-0.9.1-r1 (02 May 2013)
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  02 May 2013; Ian Delaney <idella4@gentoo.org> +lockfile-0.9.1-r1.ebuild:
-  migrate -> distutils-r1
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  26 Jan 2013; Matthew Thode <prometheanfire@gentoo.org> +lockfile-0.8.ebuild:
-  adding lockfile-0.8 because sys-cluster/cinder needs it
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  09 Jun 2012; Mike Frysinger <vapier@gentoo.org> lockfile-0.9.1.ebuild:
-  Add arm love for ChromiumOS.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.10.2.ebuild:
+  Add pypy3 support
 
-  12 Mar 2012; Brent Baude <ranger@gentoo.org> lockfile-0.9.1.ebuild:
-  Marking lockfile-0.9.1 ppc for bug 407429
+  Package-Manager: portage-2.2.20.1
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  25 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -lockfile-0.9.ebuild:
-  Delete.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.9.1-r1.ebuild,
+  lockfile-0.10.2.ebuild:
+  Use https by default
 
-  25 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
-  lockfile-0.9.1.ebuild:
-  stable x86, bug 341613
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  18 Oct 2010; Markos Chandras <hwoarang@gentoo.org> lockfile-0.9.1.ebuild:
-  Stable on amd64 wrt bug #341613
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  29 Sep 2010; Brent Baude <ranger@gentoo.org> lockfile-0.9.1.ebuild:
-  Marking lockfile-0.9.1 ~ppc for bug 315373
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-*lockfile-0.9.1 (19 Sep 2010)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +lockfile-0.9.1.ebuild:
-  Version bump.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.9.1-r1.ebuild:
+  Enable https for all google URIs
 
-  28 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> lockfile-0.9.ebuild:
-  x86 stable wrt bug #323693
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> lockfile-0.9.ebuild:
-  stable amd64, bug 323693
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.10.2.ebuild:
+  Convert all URIs for launchpad.net from http to https
 
-*lockfile-0.9 (10 May 2010)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  10 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +lockfile-0.9.ebuild:
-  Version bump.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.9.1-r1.ebuild:
+  Convert URIs for googlecode.com to https
 
-  12 Jan 2010; Christian Faulhammer <fauli@gentoo.org> lockfile-0.8.ebuild:
-  add ~x86, bug 297725
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*lockfile-0.8 (21 Dec 2009)
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  21 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +lockfile-0.8.ebuild, +metadata.xml:
-  Initial addition (bug #289495).
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
+
+  Bug: https://bugs.gentoo.org/552720
+
+  06 Sep 2015; Jeroen Roovers <jer@gentoo.org> lockfile-0.10.2.ebuild:
+  Mark ~hppa ~ppc64 (bug #558546).
+
+  Package-Manager: portage-2.2.20.1
+
+  08 Sep 2015; Joshua Kinard <kumba@gentoo.org> lockfile-0.10.2.ebuild:
+  Added ~mips to KEYWORDS.
+
+  Package-Manager: portage-2.2.20.1
+
+  22 Sep 2015; Tobias Klausmann <klausman@gentoo.org> lockfile-0.10.2.ebuild:
+  add ~alpha keyword
+
+  Gentoo-Bug: 558546
+
+  Package-Manager: portage-2.2.21
+
+  01 Oct 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add missing remote-id type=launchpad
+
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  10 Oct 2015; Mikle Kolyada <zlogene@gentoo.org> lockfile-0.10.2.ebuild:
+  Add ~sparc keywords wrt bug #558546
+
+  Package-Manager: portage-2.2.20.1
+
+*lockfile-0.10.2-r1 (11 Oct 2015)
+
+  11 Oct 2015; Justin Lecher <jlec@gentoo.org> +lockfile-0.10.2-r1.ebuild,
+  metadata.xml:
+  Add python3.5 support
+
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  14 Oct 2015; Michał Górny <mgorny@gentoo.org> lockfile-0.10.2.ebuild,
+  -lockfile-0.10.2-r1.ebuild:
+  dev-python/*: Restore keywords and un-revbump for py3.5
+
+  Restore keywords that were removed unnecessarily, and collapse
+  unnecessary revbumps on packages with added python3.5 support.
+
+  14 Oct 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.10.2.ebuild:
+  Keyword under ALLARCHES policy
+
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+*lockfile-0.11.0 (15 Oct 2015)
+
+  15 Oct 2015; Justin Lecher <jlec@gentoo.org> +lockfile-0.11.0.ebuild:
+  dev-python/decorator: Add python3.5 support
+
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  15 Oct 2015; Christoph Mende <angelos@gentoo.org> lockfile-0.11.0.ebuild:
+  README was renamed to README.rst
+
+  Package-Manager: portage-2.2.23
+
+  15 Oct 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.11.0.ebuild:
+  Fix installation problems due to file renaming
+
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+*lockfile-0.11.0-r1 (16 Oct 2015)
+
+  16 Oct 2015; Mike Gilbert <floppym@gentoo.org> -lockfile-0.11.0.ebuild,
+  +lockfile-0.11.0-r1.ebuild:
+  Remove upper-bound on dev-python/pbr
+
+  Package-Manager: portage-2.2.23_p4
+
+  02 Nov 2015; Justin Lecher <jlec@gentoo.org> -files/py3-support.patch,
+  -lockfile-0.9.1-r1.ebuild, -lockfile-0.10.2.ebuild,
+  lockfile-0.11.0-r1.ebuild:
+  Drop old
+
+  obsoletes:
+
+  Gentoo-Bug: https://bugs.gentoo.org/show_bug.cgi?id=536240
+
+  Gentoo-Bug: https://bugs.gentoo.org/show_bug.cgi?id=560752
+
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+*lockfile-0.10.2 (02 Nov 2015)
+*lockfile-0.9.1-r1 (02 Nov 2015)
+
+  02 Nov 2015; Justin Lecher <jlec@gentoo.org> +files/py3-support.patch,
+  +lockfile-0.9.1-r1.ebuild, +lockfile-0.10.2.ebuild,
+  lockfile-0.11.0-r1.ebuild:
+  Revert "dev-python/lockfile: Drop old"
+
+  This reverts commit b001341676e39eca2364fea454ab5221e7fe2c8d.
+
+  02 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  amd64 stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="amd64"
+
+  02 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  x86 stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="x86"
+
+  04 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  ppc stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc"
+
+  04 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  ppc64 stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ppc64"
+
+  05 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  sparc stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="sparc"
+
+  11 Nov 2015; Justin Lecher <jlec@gentoo.org> lockfile-0.9.1-r1.ebuild,
+  lockfile-0.10.2.ebuild, lockfile-0.11.0-r1.ebuild:
+  Depend on threading support in python
+
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  16 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  ia64 stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
+
+  19 Nov 2015; Agostino Sarubbo <ago@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  alpha stable wrt bug #564588
+
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="alpha"
+
+  22 Nov 2015; Markus Meier <maekke@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  arm stable, bug #564588
+
+  Package-Manager: portage-2.2.25
+  RepoMan-Options: --include-arches="arm"
+
+  23 Nov 2015; Jeroen Roovers <jer@gentoo.org> lockfile-0.11.0-r1.ebuild:
+  Stable for HPPA (bug #564588).
+
+  Package-Manager: portage-2.2.25
+  RepoMan-Options: --ignore-arches
+
+  23 Nov 2015; Justin Lecher <jlec@gentoo.org> -files/py3-support.patch,
+  -lockfile-0.9.1-r1.ebuild, -lockfile-0.10.2.ebuild:
+  Drop old
+
+  Package-Manager: portage-2.2.25
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+*lockfile-0.12.2 (28 Nov 2015)
+
+  28 Nov 2015; Justin Lecher <jlec@gentoo.org> +lockfile-0.12.2.ebuild:
+  Version Bump
+
+  Package-Manager: portage-2.2.25
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
+
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
