--- a/dev-python/markdown/ChangeLog
+++ b/dev-python/markdown/ChangeLog
@@ -1,205 +1,126 @@
 # ChangeLog for dev-python/markdown
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/markdown/ChangeLog,v 1.53 2014/05/26 08:46:17 patrick Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-*markdown-2.4.1 (26 May 2014)
+*markdown-2.6.2 (09 Aug 2015)
+*markdown-2.6.1 (09 Aug 2015)
+*markdown-2.5.1 (09 Aug 2015)
 
-  26 May 2014; Patrick Lauer <patrick@gentoo.org> +markdown-2.4.1.ebuild:
-  Bump
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +files/markdown-2.2.0-tests.patch, +markdown-2.5.1.ebuild,
+  +markdown-2.6.1.ebuild, +markdown-2.6.2.ebuild, +metadata.xml:
+  proj/gentoo: Initial commit
 
-*markdown-2.4 (12 Apr 2014)
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  12 Apr 2014; Ian Delaney <idella4@gentoo.org> +markdown-2.4.ebuild:
-  bump; add py3.4 support, drop py2.6 py3.2 subsequent to testsuite failures
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  07 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org> markdown-2.3.ebuild:
-  Keyword ~amd64-linux ~x86-linux
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  31 Mar 2014; Michał Górny <mgorny@gentoo.org> markdown-2.2.1-r1.ebuild,
-  markdown-2.3.1.ebuild, markdown-2.3.ebuild:
-  Add support for the new PyPy slotting.
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  06 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> markdown-2.3.1.ebuild:
-  Keyword amd64-linux and x86-linux
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> markdown-2.5.1.ebuild,
+  markdown-2.6.1.ebuild, markdown-2.6.2.ebuild:
+  Use https by default
 
-  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.3.1.ebuild:
-  Stable for sparc, wrt bug #487868
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.3.1.ebuild:
-  Stable for ppc, wrt bug #487868
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  20 Dec 2013; Akinori Hattori <hattya@gentoo.org> markdown-2.3.1.ebuild:
-  ia64 stable wrt bug #487868
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  02 Dec 2013; Johannes Huber <johu@gentoo.org> markdown-2.3.1.ebuild:
-  x86 stable, bug #487868
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  04 Nov 2013; Matt Turner <mattst88@gentoo.org> markdown-2.3.1.ebuild:
-  alpha stable, bug 487868.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> markdown-2.3.1.ebuild:
-  Marked ~x64-macos, bug #487670
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  14 Oct 2013; Tony Vroon <chainsaw@gentoo.org> markdown-2.3.1.ebuild:
-  Marked stable on AMD64 based on arch tester report by Elijah "Armageddon" El
-  Lazkani in bug #487868.
+  Bug: https://bugs.gentoo.org/552720
 
-  05 Sep 2013; Michał Górny <mgorny@gentoo.org> markdown-2.2.1-r1.ebuild,
-  markdown-2.3.1.ebuild, markdown-2.3.ebuild:
-  Clean up PYTHON_COMPAT from old implementations.
+*markdown-2.6.3 (27 Oct 2015)
 
-  06 Jun 2013; Mike Gilbert <floppym@gentoo.org> markdown-2.3.1.ebuild:
-  Remove obsolete comment.
+  27 Oct 2015; Justin Lecher <jlec@gentoo.org> +markdown-2.6.3.ebuild:
+  Version Bump
 
-  05 Jun 2013; Rick Farina <zerochaos@gentoo.org> markdown-2.2.1-r1.ebuild,
-  markdown-2.3.1.ebuild, markdown-2.3.ebuild:
-  adding ~arm keyword
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  29 May 2013; Ian Delaney <idella4@gentoo.org> markdown-2.3.1.ebuild:
-  add py3.3 support
+  28 Oct 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Update remote-ids
 
-  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.2.1-r1.ebuild:
-  Stable for sparc, wrt bug #457328
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  30 Mar 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.2.1-r1.ebuild:
-  Stable for alpha, wrt bug #457328
+  02 Nov 2015; Justin Lecher <jlec@gentoo.org> -markdown-2.5.1.ebuild,
+  -markdown-2.6.2.ebuild, metadata.xml:
+  Drop old
 
-  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.2.1-r1.ebuild:
-  Stable for ia64, wrt bug #457328
+  obsoletes:
 
-  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.2.1-r1.ebuild:
-  Stable for ppc, wrt bug #457328
+  Gentoo-Bug: https://bugs.gentoo.org/show_bug.cgi?id=550100
 
-*markdown-2.3.1 (26 Mar 2013)
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  26 Mar 2013; Patrick Lauer <patrick@gentoo.org> +markdown-2.3.1.ebuild:
-  Bump
+  02 Nov 2015; Justin Lecher <jlec@gentoo.org> markdown-2.6.3.ebuild:
+  Keyword under ALLARCHES policy
 
-  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.2.1-r1.ebuild:
-  Stable for x86, wrt bug #457328
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> markdown-2.2.1-r1.ebuild:
-  Stable for amd64, wrt bug #457328
+*markdown-2.6.4 (08 Nov 2015)
 
-*markdown-2.3 (19 Mar 2013)
+  08 Nov 2015; Justin Lecher <jlec@gentoo.org> +markdown-2.6.4.ebuild:
+  Version Bump
 
-  19 Mar 2013; Patrick Lauer <patrick@gentoo.org> +markdown-2.3.ebuild:
-  Bump
+  Package-Manager: portage-2.2.23
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*markdown-2.2.1-r1 (13 Jan 2013)
+*markdown-2.6.5 (28 Nov 2015)
 
-  13 Jan 2013; Michał Górny <mgorny@gentoo.org> +markdown-2.2.1-r1.ebuild:
-  Migrate to distutils-r1. Build docs only once, and only when requested.
+  28 Nov 2015; Justin Lecher <jlec@gentoo.org> +markdown-2.6.5.ebuild:
+  Version Bump
 
-*markdown-2.2.1 (11 Jan 2013)
+  Package-Manager: portage-2.2.25
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  11 Jan 2013; Patrick Lauer <patrick@gentoo.org> +markdown-2.2.1.ebuild:
-  Bump for #451218
+  09 Dec 2015; Justin Lecher <jlec@gentoo.org> markdown-2.6.5.ebuild:
+  Add python3.5 support
 
-  17 Nov 2012; Mike Gilbert <floppym@gentoo.org> markdown-2.2.0.ebuild:
-  Restrict python 2.5.
+  Package-Manager: portage-2.2.26
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  13 Nov 2012; Agostino Sarubbo <ago@gentoo.org> markdown-2.1.1.ebuild:
-  Stable for amd64, wrt bug #437288
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
 
-*markdown-2.2.0 (11 Nov 2012)
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
 
-  11 Nov 2012; Ian Delaney <idella4@gentoo.org>
-  +files/markdown-2.2.0-tests.patch, +markdown-2.2.0.ebuild,
-  -markdown-2.0.3.ebuild:
-  Dropped version-2.0.3, bumped version-2.2.0, upstream patch fixes broken test,
-  upstream issue #112, fixes Bug #437290
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> markdown-2.1.1.ebuild:
-  alpha/ia64/sparc/x86 stable wrt #437288
-
-  07 Oct 2012; nixnut <nixnut@gentoo.org> markdown-2.1.1.ebuild:
-  ppc stable #437288
-
-  06 Oct 2012; Mike Gilbert <floppym@gentoo.org> markdown-2.1.0.ebuild,
-  markdown-2.1.1.ebuild:
-  Depend on nose for tests, bug 437442 by Vicente Olivert Riera.
-
-  10 May 2012; Mike Gilbert <floppym@gentoo.org> markdown-2.1.1.ebuild:
-  Call 2to3-${PYTHON_ABI}, spotted by Arfrever.
-
-  09 May 2012; Mike Gilbert <floppym@gentoo.org> markdown-2.1.1.ebuild:
-  Unrestrict python 3, bug 407925 by W. Trevor King.
-
-*markdown-2.1.1 (20 Feb 2012)
-
-  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> +markdown-2.1.1.ebuild:
-  Bump for #404543
-
-*markdown-2.1.0 (01 Dec 2011)
-
-  01 Dec 2011; Dirkjan Ochtman <djc@gentoo.org> +markdown-2.1.0.ebuild:
-  Version bump, add testing.
-
-  07 Jul 2011; Jesus Rivero <neurogeek@gentoo.org> markdown-2.0.3.ebuild:
-  Added doc USE flag. Fixed dodoc on dir wrt bug #367689
-
-  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -markdown-2.0.2.ebuild:
-  Delete.
-
-  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  markdown-2.0.3.ebuild:
-  Update EAPI. Fix dependencies. Use PyPI mirrors.
-
-  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> markdown-2.0.3.ebuild:
-  stable amd64, bug 310261
-
-  18 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> markdown-2.0.3.ebuild:
-  Stable for ppc, bug 292316
-
-  14 Nov 2009; Raúl Porcel <armin76@gentoo.org> markdown-2.0.3.ebuild:
-  ia64/sparc/x86 stable wrt #288165
-
-  08 Nov 2009; Tobias Klausmann <klausman@gentoo.org> markdown-2.0.3.ebuild:
-  Stable on alpha, bug #288165
-
-  03 Nov 2009; Raúl Porcel <armin76@gentoo.org> markdown-2.0.2.ebuild,
-  markdown-2.0.3.ebuild:
-  Add ~ia64/~sparc wrt #285153
-
-*markdown-2.0.3 (08 Oct 2009)
-
-  08 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -markdown-2.0.1.ebuild, +markdown-2.0.3.ebuild:
-  Version bump.
-
-  07 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> markdown-2.0.2.ebuild:
-  Keywording for ppc, bug 285153
-
-  06 Oct 2009; Fabian Groffen <grobian@gentoo.org> markdown-2.0.2.ebuild:
-  Marked ~ppc-macos and ~x86-macos, bug #287632
-
-  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org> markdown-2.0.2.ebuild:
-  Keyworded on alpha, bug #285153
-
-  01 Oct 2009; Tobias Klausmann <klausman@gentoo.org> markdown-2.0.1.ebuild:
-  Keyworded on alpha, bug #285153
-
-*markdown-2.0.2 (28 Sep 2009)
-
-  28 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +markdown-2.0.2.ebuild:
-  Version bump.
-
-  16 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -markdown-2.0.ebuild:
-  Delete older ebuild.
-
-*markdown-2.0.1 (04 Aug 2009)
-
-  04 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  +markdown-2.0.1.ebuild:
-  Version bump (bug #279946). Set SUPPORT_PYTHON_ABIS.
-
-*markdown-2.0 (25 Apr 2009)
-
-  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
-  +markdown-2.0.ebuild:
-  Initial import. Fixes #156999. Thanks to Naoaki Shindo, Torsten Rehn and
-  Priit Laes for working on the ebuild.
