--- a/dev-python/python-daemon/ChangeLog
+++ b/dev-python/python-daemon/ChangeLog
@@ -1,51 +1,88 @@
 # ChangeLog for dev-python/python-daemon
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-daemon/ChangeLog,v 1.12 2013/07/27 11:40:37 ago Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-daemon-1.6-r1.ebuild:
-  Stable for amd64, wrt bug #477628
+*python-daemon-2.0.5 (09 Aug 2015)
+*python-daemon-2.0.4 (09 Aug 2015)
+*python-daemon-1.6-r1 (09 Aug 2015)
 
-  24 Jul 2013; Patrick Lauer <patrick@gentoo.org> python-daemon-1.6-r1.ebuild:
-  QA: Removing stable keyword on arm as dev-python/lockfile doesn't have
-  matching keywords yet
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
+  +python-daemon-1.6-r1.ebuild, +python-daemon-2.0.4.ebuild,
+  +python-daemon-2.0.5.ebuild:
+  proj/gentoo: Initial commit
 
-  23 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-daemon-1.6-r1.ebuild:
-  Stable for arm, wrt bug #477628
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-*python-daemon-1.6-r1 (31 May 2013)
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  31 May 2013; Tim Harder <radhermit@gentoo.org> +python-daemon-1.6-r1.ebuild:
-  Revision bump, migrate to distutils-r1.
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  09 Jun 2012; Mike Frysinger <vapier@gentoo.org> python-daemon-1.6.ebuild:
-  Add arm love for ChromiumOS.
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> python-daemon-1.6.ebuild:
-  Restricting python stuff properly
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> python-daemon-1.6-r1.ebuild,
+  python-daemon-2.0.4.ebuild, python-daemon-2.0.5.ebuild:
+  Use https by default
 
-  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> python-daemon-1.6.ebuild:
-  Update LICENSE. Patch by Arfrever.
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  28 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
-  python-daemon-1.6.ebuild:
-  x86 stable wrt bug #323693
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> python-daemon-1.6.ebuild:
-  stable amd64, bug 323693
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-*python-daemon-1.6 (10 May 2010)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  10 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
-  -python-daemon-1.5.2.ebuild, +python-daemon-1.6.ebuild:
-  Version bump.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-*python-daemon-1.5.5 (02 Mar 2010)
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  02 Mar 2010; Tiziano Müller <dev-zero@gentoo.org>
-  +python-daemon-1.5.5.ebuild:
-  Version bump, various improvements.
+  Bug: https://bugs.gentoo.org/552720
 
-*python-daemon-1.5.2 (22 Jan 2010)
+*python-daemon-2.0.6 (19 Sep 2015)
 
-  22 Jan 2010; Dirkjan Ochtman <djc@gentoo.org> +python-daemon-1.5.2.ebuild:
-  Initial version (contributed by Priit Laes; bug 289496).
+  19 Sep 2015; Dirkjan Ochtman <djc@gentoo.org> +python-daemon-2.0.6.ebuild:
+  version bump to 2.0.6
+
+  Package-Manager: portage-2.2.20.1
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Replace all herds with appropriate projects (GLEP 67)
+
+  Replace all uses of herd with appropriate project maintainers, or no
+  maintainers in case of herds requested to be disbanded.
+
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
+
+*python-daemon-2.1.1 (20 Feb 2016)
+
+  20 Feb 2016; Dirkjan Ochtman <djc@gentoo.org> +python-daemon-2.1.1.ebuild:
+  version bump to 2.1.1
+
+  Package-Manager: portage-2.2.26
+
